--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
 
     <link rel="icon" href="/favicon.ico" />
-    <title>React TS Starter</title>
+    <title>Fantastic Card Form</title>
   </head>
 
   <body>
